[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/tiles/Tileset1.2.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/spawnManger.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world.gd" type="Script" id=4]
[ext_resource path="res://ui/scoreBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Abaddon Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://crtShader.tscn" type="PackedScene" id=8]
[ext_resource path="res://OutOfBounds.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/BackgroundStuff/Leather.png" type="Texture" id=10]
[ext_resource path="res://ui/npcs.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/My Song 3.wav" type="AudioStream" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "Tileset1.2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 320, Vector2( 0, 1 ), 325, Vector2( 0, 2 ), 5, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset1.2.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 96, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=8]
size = 23
font_data = ExtResource( 7 )

[node name="world" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 64, -176 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 15
format = 1
tile_data = PoolIntArray( -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 1, -2, 0, 1, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 1, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 1, -65528, 0, 0, -65527, 0, 1, -65526, 0, 1, -65525, 0, 0, -65524, 0, 1, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 1, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 1, -65514, 0, 0, -65513, 0, 0, -65512, 0, 1, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 1, -65506, 0, 1, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 1, -65501, 0, 1, -65500, 0, 1, -65499, 0, 0, 65530, 0, 0, 65531, 0, 65536, 65532, 0, 65536, 65533, 0, 65536, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65536, 1, 0, 65536, 2, 0, 65536, 3, 0, 65536, 4, 0, 65536, 5, 0, 65537, 6, 0, 65537, 7, 0, 65536, 8, 0, 65536, 9, 0, 65537, 10, 0, 65537, 11, 0, 65536, 12, 0, 65537, 13, 0, 65536, 14, 0, 65536, 15, 0, 65537, 16, 0, 65536, 17, 0, 65536, 18, 0, 65536, 19, 0, 65536, 20, 0, 65536, 21, 0, 65537, 22, 0, 65537, 23, 0, 65536, 24, 0, 65537, 25, 0, 65537, 26, 0, 65536, 27, 0, 65537, 28, 0, 65536, 29, 0, 65536, 30, 0, 65536, 31, 0, 65537, 32, 0, 65537, 33, 0, 65536, 34, 0, 65537, 35, 0, 65536, 36, 0, 65537, 37, 0, 0, 131066, 0, 0, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65536, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65536, 65538, 0, 65537, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65537, 65542, 0, 65536, 65543, 0, 65536, 65544, 0, 65537, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 65537, 65548, 0, 65536, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65536, 65553, 0, 65536, 65554, 0, 65537, 65555, 0, 65536, 65556, 0, 65537, 65557, 0, 65536, 65558, 0, 65537, 65559, 0, 65537, 65560, 0, 65537, 65561, 0, 65537, 65562, 0, 65536, 65563, 0, 65536, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65536, 65569, 0, 65536, 65570, 0, 65536, 65571, 0, 65537, 65572, 0, 65537, 65573, 0, 0, 196602, 0, 0, 196603, 0, 65536, 196604, 0, 65536, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 131079, 0, 65537, 131080, 0, 65536, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65536, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65536, 131087, 0, 65536, 131088, 0, 65537, 131089, 0, 65536, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 131093, 0, 65536, 131094, 0, 65536, 131095, 0, 65537, 131096, 0, 65537, 131097, 0, 65536, 131098, 0, 65537, 131099, 0, 65536, 131100, 0, 65537, 131101, 0, 65536, 131102, 0, 65536, 131103, 0, 65536, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65536, 131108, 0, 65537, 131109, 0, 0, 262138, 0, 0, 262139, 0, 65537, 262140, 0, 65536, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65536, 196608, 0, 65537, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65536, 196617, 0, 65537, 196618, 0, 65536, 196619, 0, 65537, 196620, 0, 65536, 196621, 0, 65536, 196622, 0, 65536, 196623, 0, 65536, 196624, 0, 65537, 196625, 0, 65536, 196626, 0, 65537, 196627, 0, 65536, 196628, 0, 65536, 196629, 0, 65536, 196630, 0, 65536, 196631, 0, 65536, 196632, 0, 65537, 196633, 0, 65536, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65536, 196639, 0, 65536, 196640, 0, 65536, 196641, 0, 65537, 196642, 0, 65536, 196643, 0, 65536, 196644, 0, 65536, 196645, 0, 0, 327674, 0, 0, 327675, 0, 65537, 327676, 0, 65536, 327677, 0, 65537, 327678, 0, 65536, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65536, 262146, 0, 65537, 262147, 0, 65536, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65536, 262153, 0, 65537, 262154, 0, 65536, 262155, 0, 65536, 262156, 0, 65536, 262157, 0, 65536, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65536, 262161, 0, 65537, 262162, 0, 65536, 262163, 0, 65537, 262164, 0, 65536, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65536, 262168, 0, 65536, 262169, 0, 65536, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65536, 262175, 0, 65537, 262176, 0, 65536, 262177, 0, 65537, 262178, 0, 65536, 262179, 0, 65536, 262180, 0, 65536, 262181, 0, 0, 393210, 0, 0, 393211, 0, 131072, 393212, 0, 131073, 393213, 0, 131073, 393214, 0, 131073, 393215, 0, 131072, 327680, 0, 131073, 327681, 0, 131072, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 131073, 327686, 0, 131072, 327687, 0, 131073, 327688, 0, 131073, 327689, 0, 131072, 327690, 0, 131073, 327691, 0, 131072, 327692, 0, 131072, 327693, 0, 131073, 327694, 0, 131072, 327695, 0, 131073, 327696, 0, 131072, 327697, 0, 131072, 327698, 0, 131072, 327699, 0, 131073, 327700, 0, 131072, 327701, 0, 131072, 327702, 0, 131073, 327703, 0, 131072, 327704, 0, 131073, 327705, 0, 131072, 327706, 0, 131073, 327707, 0, 131073, 327708, 0, 131072, 327709, 0, 131072, 327710, 0, 131073, 327711, 0, 131072, 327712, 0, 131072, 327713, 0, 131072, 327714, 0, 131072, 327715, 0, 131073, 327716, 0, 131072, 327717, 0, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 524282, 1, 0, 524283, 1, 0, 524284, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 1, 0, 655357, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 655392, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 786468, 1, 0, 786469, 1, 0, 917498, 1, 0, 917499, 1, 0, 917500, 1, 0, 917501, 1, 0, 917502, 1, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 983034, 1, 0, 983035, 1, 0, 983036, 1, 0, 983037, 1, 0, 983038, 1, 0, 983039, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 1048570, 1, 0, 1048571, 1, 0, 1048572, 1, 0, 1048573, 1, 0, 1048574, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 1114106, 1, 0, 1114107, 1, 0, 1114108, 1, 0, 1114109, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1179642, 1, 0, 1179643, 1, 0, 1179644, 1, 0, 1179645, 1, 0, 1179646, 1, 0, 1179647, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1114144, 1, 0, 1114145, 1, 0, 1114146, 1, 0, 1114147, 1, 0, 1114148, 1, 0, 1114149, 1, 0, 1245178, 1, 0, 1245179, 1, 0, 1245180, 1, 0, 1245181, 1, 0, 1245182, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 1, 0, 1179684, 1, 0, 1179685, 1, 0, 1310714, 1, 0, 1310715, 1, 0, 1310716, 1, 0, 1310717, 1, 0, 1310718, 1, 0, 1310719, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1245217, 1, 0, 1245218, 1, 0, 1245219, 1, 0, 1245220, 1, 0, 1245221, 1, 0, 1376250, 1, 0, 1376251, 1, 0, 1376252, 1, 0, 1376253, 1, 0, 1376254, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 1, 0, 1441786, 1, 0, 1441787, 1, 0, 1441788, 1, 0, 1441789, 1, 0, 1441790, 1, 0, 1441791, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376292, 1, 0, 1376293, 1, 0, 1507322, 1, 0, 1507323, 1, 0, 1507324, 1, 0, 1507325, 1, 0, 1507326, 1, 0, 1507327, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1572858, 1, 0, 1572859, 1, 0, 1572860, 1, 0, 1572861, 1, 0, 1572862, 1, 0, 1572863, 1, 0, 1507328, 1, 0, 1507329, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1507340, 1, 0, 1507341, 1, 0, 1507342, 1, 0, 1507343, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507347, 1, 0, 1507348, 1, 0, 1507349, 1, 0, 1507350, 1, 0, 1507351, 1, 0, 1507352, 1, 0, 1507353, 1, 0, 1507354, 1, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1507358, 1, 0, 1507359, 1, 0, 1507360, 1, 0, 1507361, 1, 0, 1507362, 1, 0, 1507363, 1, 0, 1507364, 1, 0, 1507365, 1, 0, 1638394, 1, 0, 1638395, 1, 0, 1638396, 1, 0, 1638397, 1, 0, 1638398, 1, 0, 1638399, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 328 )
scale = Vector2( 3, 3 )
hype = true

[node name="BackGroundStuff" type="Node2D" parent="."]
position = Vector2( 208, 128 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BackGroundStuff"]
position = Vector2( -40, -128 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 2

[node name="Sprite2" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 224, -128 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 1

[node name="Sprite3" type="Sprite" parent="BackGroundStuff"]
position = Vector2( -168, -138.973 )
rotation = 1.3439
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 1

[node name="Sprite4" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 600, -136 )
rotation = 1.3439
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 2

[node name="Sprite5" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 416, -136 )
rotation = 1.80991
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 2

[node name="Sprite6" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 168, -144 )
rotation = 1.80991
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 2

[node name="Sprite7" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 48, -136 )
rotation = 1.39103
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 1

[node name="Sprite8" type="Sprite" parent="BackGroundStuff"]
position = Vector2( 48, -136 )
rotation = 1.39103
scale = Vector2( 2.09291, 2 )
texture = ExtResource( 10 )
vframes = 3
frame = 1

[node name="Ui" type="Node2D" parent="."]

[node name="npcs" parent="Ui" instance=ExtResource( 11 )]
position = Vector2( 632, 80 )
scale = Vector2( 2, 2 )

[node name="npcs2" parent="Ui" instance=ExtResource( 11 )]
position = Vector2( 232, 48 )
scale = Vector2( -2, 2 )

[node name="HealthBar" parent="Ui" instance=ExtResource( 6 )]
position = Vector2( 280, 120 )
scale = Vector2( 2.6, 2.6 )

[node name="scoreBoard" parent="Ui" instance=ExtResource( 5 )]
position = Vector2( 472, 72 )
rotation = -1.5708

[node name="score" type="Label" parent="Ui"]
margin_left = 400.0
margin_top = 56.0
margin_right = 544.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.101961, 0.121569, 0.180392, 1 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1

[node name="CanvasLayer" parent="." instance=ExtResource( 8 )]

[node name="TextureRect" parent="CanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -112.0
margin_right = 128.0
margin_bottom = 48.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 496, 296 )
current = true

[node name="spawnManger" parent="." instance=ExtResource( 3 )]
position = Vector2( 72, 80 )

[node name="SpawnPoint1" parent="spawnManger/spawnPos" index="0"]
position = Vector2( 1000, 128 )

[node name="SpawnPoint2" parent="spawnManger/spawnPos" index="1"]
position = Vector2( 1000, 208 )

[node name="SpawnPoint3" parent="spawnManger/spawnPos" index="2"]
position = Vector2( 1008, 296 )

[node name="SpawnPoint4" parent="spawnManger/spawnPos" index="3"]
position = Vector2( 1000, 384 )

[node name="SpawnPoint5" parent="spawnManger/spawnPos" index="4"]
position = Vector2( 960, 440 )

[node name="OutOfBounds" parent="." groups=["enemy"] instance=ExtResource( 9 )]

[node name="Area2D" parent="OutOfBounds" index="0" groups=["enemy"]]
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" parent="OutOfBounds/Area2D" index="0"]
position = Vector2( 512, 64 )

[node name="CollisionShape2D2" parent="OutOfBounds/Area2D" index="2"]
position = Vector2( -248, 320 )

[node name="CollisionShape2D3" parent="OutOfBounds/Area2D" index="3"]
position = Vector2( 604.75, 680 )

[node name="CollisionShape2D4" parent="OutOfBounds/Area2D" index="4"]
position = Vector2( 1208, 328 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="kill" from="." to="." method="_on_world_kill"]
[connection signal="kill" from="." to="Ui/npcs" method="_on_world_kill"]
[connection signal="kill" from="." to="spawnManger" method="_on_world_kill"]
[connection signal="died" from="player" to="." method="_on_player_died"]
[connection signal="healthUp" from="player" to="Ui/npcs" method="_on_player_healthUp"]
[connection signal="healthUp" from="player" to="Ui/npcs2" method="_on_player_healthUp"]
[connection signal="healthUp" from="player" to="Ui/HealthBar" method="_on_player_healthUp"]
[connection signal="healthdown" from="player" to="Ui/npcs" method="_on_player_healthdown"]
[connection signal="healthdown" from="player" to="Ui/npcs2" method="_on_player_healthdown"]
[connection signal="healthdown" from="player" to="Ui/HealthBar" method="_on_player_healthdown"]
[connection signal="shoot" from="player" to="." method="_on_player_shoot"]
[connection signal="BasicScore" from="spawnManger" to="." method="_on_spawnManger_BasicScore"]
[connection signal="BestScore" from="spawnManger" to="." method="_on_spawnManger_BestScore"]
[connection signal="BetterScore" from="spawnManger" to="." method="_on_spawnManger_BetterScore"]
[connection signal="BossScore" from="spawnManger" to="." method="_on_spawnManger_BossScore"]
[connection signal="addScore" from="spawnManger" to="." method="_on_spawnManger_addScore"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]

[editable path="CanvasLayer"]
[editable path="spawnManger"]
[editable path="OutOfBounds"]
